<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_asteroids"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_filters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:translationZ="1dp"
        android:animateLayoutChanges="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="0dp">

                <TextView
                    android:id="@+id/tv_from"
                    style="@style/TextRegular.Size14.PrimaryLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    tools:text="05-03-2024" />
            </androidx.cardview.widget.CardView>

            <ImageButton
                android:id="@+id/ib_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:background="@null"
                android:src="@drawable/ic_calendar" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="0dp">

                <TextView
                    android:id="@+id/tv_to"
                    style="@style/TextRegular.Size14.PrimaryLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    tools:text="05-03-2024" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <CheckBox
                android:id="@+id/cb_desc"
                style="@style/TextRegular.Size14.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableRight="@drawable/selector_checkbox"
                android:background="@android:color/transparent"
                android:paddingVertical="8dp"
                android:text="@string/descending_order" />

            <CheckBox
                android:id="@+id/cb_hazardous"
                style="@style/TextRegular.Size14.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableRight="@drawable/selector_checkbox"
                android:background="@android:color/transparent"
                android:paddingVertical="8dp"
                android:text="@string/potentially_hazardous" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_apply"
            style="@style/TextMedium.Size16.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/primary"
            android:text="@string/apply"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_show_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationZ="1dp"
        android:gravity="center"
        android:background="@color/white"
        android:animateLayoutChanges="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_filters">
        <ImageView
            android:id="@+id/iv_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="@null"
            android:src="@drawable/ic_chevron_down" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_asteroids"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_asteroids_week" />

    <LinearLayout
        android:id="@+id/ll_retry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/ic_reload" />

        <TextView
            android:id="@+id/tv_error_message"
            style="@style/TextMedium.Size14.Red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="Error message" />

        <TextView
            style="@style/TextMedium.Size14.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again_later" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>